# gymbox

./: .gitignore  README.md
docs/: CLAUDE.md  NOTES.md  ROADMAP.md  SETUP.md  TRACKER.md  WORKLOG.md  architecture.md  product.md
gymbox-box/: Dockerfile  README.md  app.py  docker-compose.yml
gymbox-box/nginx/: nginx.conf
gymbox-proto/: README.md
gymbox-proto/proto/: gymbox.proto
gymbox-proto/python/: pyproject.toml
gymbox-proto/python/gymbox_proto/: __init__.py
gymbox-proto/scripts/: gen_python.sh  gen_swift.sh
gymbox-proto/swift/: Package.swift
gymbox-proto/swift/Sources/GymboxProto/: GymboxProto.swift
ios/: Package.swift
ios/Sources/GymboxSDK/: Gymbox.swift
ios/Sources/GymboxSDK/Catalog/: ExerciseCatalog.swift
ios/Sources/GymboxSDK/DSL/: DSLInterpreter.swift  ExerciseSpec.swift  Signal.swift
ios/Sources/GymboxSDK/Models/: Keypoints.swift  Models.swift
ios/Sources/GymboxSDK/Pose/: PoseSource.swift
ios/Tests/GymboxSDKTests/: GymboxSDKTests.swift
server/: alembic.ini  pyproject.toml
server/exercises/: db_curl.json
server/gymbox/: __init__.py  backend.py  config.py  materializer.py  refdeploy.py
server/gymbox/annotations/: __init__.py  writer.py
server/gymbox/api/: __init__.py  exercises.py  http.py  schemas.py  sessions.py
server/gymbox/dsl/: __init__.py  keypoints.py  models.py
server/gymbox/persistence/: __init__.py  blobs.py  models.py
server/gymbox/pipeline/: __init__.py  activity.py  camera_angle.py  classifier.py  fsm.py  metrics.py  rep.py  replay.py  signal.py  types.py
server/migrations/: env.py
server/migrations/versions/: 0001_initial.py
server/scripts/: build_fixtures.py  eval_gate_a.py  eval_perside.py  fit_db_curl.py  fit_user_metrics.py  make_fixture.py
server/tests/: conftest.py  test_dsl.py  test_exercises_etag.py  test_gate_a.py  test_ingest.py  test_integration.py  test_signal.py
tools/viz/: README.md  batch.py  skeleton.py  visualize.py
(+5 files in other folders)
