[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymbox"
version = "0.1.0"
description = "gymbox server: storage + OTA exercise-spec channel + reference rep-detection oracle (MVP-α, edge-first v0.7)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Sol" }]

# Core runtime. The server in MVP-α is dumb storage + the /exercises OTA
# channel; numpy/scipy are here for the *reference oracle* (pipeline/), which
# validates the Swift port and does batch replay — it is NOT a request-path
# dependency. See architecture.md §9.
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
# Everything needed to actually *run* the reference box (gymbox-box).
refbox = [
    "argon2-cffi>=23.1",
    "uvicorn[standard]>=0.27",
    "aiosqlite>=0.19",
    "alembic>=1.13",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "alembic>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gymbox*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
