[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymbox-proto"
version = "0.1.0"
description = "gymbox shared wire format (Protocol Buffers) — Python bindings"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=4.25,<6",
]

[project.optional-dependencies]
codegen = ["grpcio-tools>=1.60"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gymbox_proto*"]
